--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Quotes</title>
 </head>
 <body>
 <div class="container">
     <div class="poster">
-        <p class="quote"><span>One Skill</span> Equals to <span>Infinite</span> Opportunities .</p>
-        <p class="name">George Skolsky</p>
+        <p class="quote"><span> Skill</span> is only a  <span>Rumour </span>Until it Reaches the <span>Muscle</span>.</p>
+        <p class="name">Balinese Proverb</p>
     </div>
 </div>
-
 <div class="cursor"></div>
 <div class="cursor-follower"></div>
 </body>
